/*
 * Copyright (c) 2019 Toast Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package test.kt;

// This is the root message for testing documentation.
// This line is line two.
message DocTestRoot {
  // This is a documented field.
  //   This line should be indented twice more.
  bytes val = 1;

  string no_docs = 2;

  // This is documentation for a nested message.
  // This line is line two.
  message NestedDocTest {
    // This is a field of a nested message
    bytes val = 1;

    string no_docs = 2;

    // This is a nested enum.
    enum NestedEnum {
      // Nested enum value with comment.
      WITH_DOC = 0;
    }
  }

  // Here's a commented oneof field.
  oneof oneof_doc {
    // Here's some fun documentation copied from the benchmarks:
    //
    //  while (!benchmarkDone) {  // Benchmark runner decides when to exit.
    //    for (i = 0; i < benchmark.payload.length; i++) {
    //      parse(benchmark.payload[i])
    //    }
    //  }
    bytes oneof_bytes = 3;

    string oneof_no_docs = 4;
  }

  oneof oneof_no_doc {
    bytes oneof_no_docs_field = 5;
  }

  // Here's an enum with a comment.
  enum EnumDoc {
    // Here's an enum value with a comment.
    WITH_DOC = 0;
    WITHOUT_DOC = 1;
  }

  enum EnumNoDoc {
    NO_DOC = 0;
  }
}
